fix: instant roof quote visibility

--- a/src/features/home/NowServing/NowServing.module.css
+++ b/src/features/home/NowServing/NowServing.module.css
@@ -1,5 +1,5 @@
 .section {
-    padding: 80px 20px 40px 20px;
+    padding: 80px 20px 20px 20px;
     background-color: white; /* Fondo gris claro */
     overflow: hidden;
     display: flex;
